--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "flowbite": "^1.6.6",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "tailwindcss": "^3.3.2",
     "zustand": "^4.3.8"
   },
